commit 221cf7294ea8045ff043e26e6864708f001dc3ee
Author: J. R. Okajima <hooanon05@yahoo.co.jp>
Date:   Mon Jul 20 22:28:41 2009 +0900

    aufs: tiny, reduce the stack usage
    
    Signed-off-by: J. R. Okajima <hooanon05@yahoo.co.jp>

commit 2a055186b1c6c15bb088683fe9b738c69f3b264b
Author: J. R. Okajima <hooanon05@yahoo.co.jp>
Date:   Mon Jul 20 22:13:37 2009 +0900

    aufs: bugfix, imbalance lock/unlock in error handling of aufs_link()
    
    In an error handling, aufs_link() unlocked a lock illegally.
    
    Signed-off-by: J. R. Okajima <hooanon05@yahoo.co.jp>

commit 209cf3641b9daa3e6dd6e61af47633a28322a326
Author: J. R. Okajima <hooanon05@yahoo.co.jp>
Date:   Mon Jul 20 21:52:43 2009 +0900

    aufs: tiny, add prefix some messages
    
    Signed-off-by: J. R. Okajima <hooanon05@yahoo.co.jp>

commit 735869d863fc739fa506f366632e1d229f3b4e5e
Author: J. R. Okajima <hooanon05@yahoo.co.jp>
Date:   Mon Jul 20 21:51:18 2009 +0900

    aufs: possible bugfix, file might be removed before aufs_link()
    
    The file to be being linked by aufs_link may be remobed already.
    Test and make sure the file still exists.
    
    Signed-off-by: J. R. Okajima <hooanon05@yahoo.co.jp>

commit 9325f789c9f36289d068ffdb581544471ea721b0
Author: J. R. Okajima <hooanon05@yahoo.co.jp>
Date:   Wed Jul 15 04:34:50 2009 +0900

    aufs: possible bugfix, give up lock free root dinfo in aufs_getattr()
    
    In aufs_getattr() tries not to lock for root dir. But it may cause
    incorrect nlink value. Lock root as well as children.
    
    Signed-off-by: J. R. Okajima <hooanon05@yahoo.co.jp>

commit 54ff893c8319f2fe3632fa84baf62ab84b164776
Author: J. R. Okajima <hooanon05@yahoo.co.jp>
Date:   Mon Jul 20 14:08:21 2009 +0900

    aufs: possible bugfix, memory barrier at the end of MAINTAIN_PLINK
    
    Since AuSi_MAINTAIN_PLINK of au_si_status is cleared without write-lock,
    insert the memory barrier after it.
    
    Signed-off-by: J. R. Okajima <hooanon05@yahoo.co.jp>
